--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,12 @@
     android:layout_height="match_parent"
     android:background="@android:color/background_dark"
     tools:context=".MainActivity">
+    <!-- This is NOT a root view, but should be a child of whatever root view you choose (CoordinatorLayout, ConstraintLayout, etc) -->
 
     <TextView
         android:id="@+id/mouseView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="614dp"
+        android:layout_height="255dp"
         android:isScrollContainer="true"
         android:scrollHorizontally="true"
         android:text="@string/run_script_info"
@@ -19,9 +20,11 @@
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/activity_mouse_jnicallback"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="@+id/activity_mouse_jnicallback"
         app:layout_constraintRight_toRightOf="@+id/activity_mouse_jnicallback"
         app:layout_constraintTop_toTopOf="@+id/activity_mouse_jnicallback"
+        app:layout_constraintVertical_bias="0.415"
         tools:layout_constraintBottom_creator="0"
         tools:layout_constraintLeft_creator="0"
         tools:layout_constraintRight_creator="0"
@@ -31,8 +34,8 @@
         android:id="@+id/start_editor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="196dp"
+        android:layout_marginEnd="108dp"
+        android:layout_marginBottom="100dp"
         android:text="@string/edit_keymap"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -41,8 +44,8 @@
         android:id="@+id/stop_pointer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="148dp"
+        android:layout_marginEnd="252dp"
+        android:layout_marginBottom="52dp"
         android:text="@string/stop_pointer_overlay"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -51,7 +54,7 @@
         android:id="@+id/startServer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="80dp"
         android:layout_marginBottom="52dp"
         android:text="@string/start_server"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -61,8 +64,8 @@
         android:id="@+id/startServerM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="12dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginEnd="252dp"
+        android:layout_marginBottom="4dp"
         android:text="@string/start_server_manual"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
