--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,78 +6,246 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_dark"
-    tools:context=".MainActivity">
-    <!-- This is NOT a root view, but should be a child of whatever root view you choose (CoordinatorLayout, ConstraintLayout, etc) -->
+    tools:context=".MainActivity"
+    tools:ignore="ContentDescription,SpUsage" >
 
     <TextView
         android:id="@+id/mouseView"
-        android:layout_width="614dp"
-        android:layout_height="255dp"
+        android:layout_width="391dp"
+        android:layout_height="132dp"
+        android:layout_marginTop="16dp"
         android:isScrollContainer="true"
         android:scrollHorizontally="true"
         android:text="@string/run_script_info"
         android:textAppearance="@android:style/TextAppearance.Material.Large"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/activity_mouse_jnicallback"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="@+id/activity_mouse_jnicallback"
         app:layout_constraintRight_toRightOf="@+id/activity_mouse_jnicallback"
-        app:layout_constraintTop_toTopOf="@+id/activity_mouse_jnicallback"
-        app:layout_constraintVertical_bias="0.415"
-        tools:layout_constraintBottom_creator="0"
-        tools:layout_constraintLeft_creator="0"
-        tools:layout_constraintRight_creator="0"
-        tools:layout_constraintTop_creator="0" />
+        app:layout_constraintTop_toTopOf="@+id/activity_mouse_jnicallback" />
 
-    <Button
-        android:id="@+id/start_editor"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="108dp"
-        android:layout_marginBottom="100dp"
-        android:text="@string/edit_keymap"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constrained"
+        android:layout_width="388dp"
+        android:layout_height="257dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent">
 
-    <Button
-        android:id="@+id/stop_pointer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="252dp"
-        android:layout_marginBottom="52dp"
-        android:text="@string/stop_pointer_overlay"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/barrierVertical"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:barrierDirection="right"
+            app:constraint_referenced_ids="L1, L2"
+            tools:layout_editor_absoluteX="125dp" />
 
-    <Button
-        android:id="@+id/startServer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="52dp"
-        android:text="@string/start_server"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/barrierVertical2"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="vertical"
+            app:barrierDirection="right"
+            app:constraint_referenced_ids="R2, L2"
+            tools:layout_editor_absoluteX="125dp" />
 
-    <Button
-        android:id="@+id/startServerM"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="252dp"
-        android:layout_marginBottom="4dp"
-        android:text="@string/start_server_manual"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <FrameLayout
+            android:id="@+id/L1"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="128dp"
+            app:layout_constraintLeft_toLeftOf="parent">
 
-    <Button
-        android:id="@+id/startPointer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="6dp"
-        android:text="@string/start_touch_pointer"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/stop_pointer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_create_white_24dp"
+                app:fabCustomSize="55dp"
+                app:maxImageSize="40dp"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:elevation="16dp"
+                android:text="@string/stop_pointer_overlay"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/white"
+                android:textSize="14dp" />
+        </FrameLayout>
+
+
+        <FrameLayout
+            android:id="@+id/R1"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:layout_gravity="bottom|end"
+            app:layout_constraintHorizontal_bias="0.051"
+            app:layout_constraintLeft_toRightOf="@+id/barrierVertical"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/startServer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_create_white_24dp"
+                app:fabCustomSize="55dp"
+                app:maxImageSize="40dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:elevation="16dp"
+                android:text="@string/start_server"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/white"
+                android:textSize="14dp" />
+        </FrameLayout>
+
+        <androidx.constraintlayout.widget.Barrier
+            android:id="@+id/barrier1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            app:barrierDirection="bottom"
+            app:constraint_referenced_ids="L1, R1"
+            tools:layout_editor_absoluteY="44dp" />
+
+
+        <FrameLayout
+            android:id="@+id/L2"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:layout_gravity="bottom|end"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/barrier1">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/startServerM"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_create_white_24dp"
+                app:fabCustomSize="55dp"
+                app:maxImageSize="40dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:elevation="16dp"
+                android:text="@string/start_server_manual"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/white"
+                android:textSize="14dp"
+                tools:ignore="SpUsage" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/R2"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:layout_gravity="bottom|end"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.058"
+            app:layout_constraintLeft_toRightOf="@+id/barrierVertical"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/barrier1">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/startPointer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_create_white_24dp"
+                app:fabCustomSize="55dp"
+                app:maxImageSize="40dp" />
+
+            <TextView
+                android:layout_width="140dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:elevation="16dp"
+                android:text="@string/start_touch_pointer"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/white"
+                android:textSize="14dp" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/R3"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:layout_gravity="bottom|end"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/barrierVertical2"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/barrier1">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_create_white_24dp"
+                app:fabCustomSize="55dp"
+                app:maxImageSize="40dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:elevation="16dp"
+                android:text="@string/about_info"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/white"
+                android:textSize="14dp" />
+        </FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/L3"
+            android:layout_width="120dp"
+            android:layout_height="90dp"
+            android:layout_gravity="bottom|end"
+            app:layout_constraintLeft_toRightOf="@+id/barrierVertical2"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/start_editor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_create_white_24dp"
+                app:fabCustomSize="55dp"
+                app:maxImageSize="40dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center"
+                android:elevation="16dp"
+                android:text="@string/edit_keymap"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@android:color/white"
+                android:textSize="14dp" />
+        </FrameLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
