--- a/app/src/main/res/layout/key.xml
+++ b/app/src/main/res/layout/key.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.xtr.keymapper.MovableFrameLayout android:orientation="vertical"
+<com.xtr.keymapper.Layout.MovableFrameLayout android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
+    android:id="@+id/movableFrameLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -13,7 +14,7 @@
         android:id="@+id/imageView"
         android:src="@drawable/key" />
 
-    <com.xtr.keymapper.UppercaseEditText
+    <com.xtr.keymapper.Layout.UppercaseEditText
         android:id="@+id/key"
         android:layout_width="28dp"
         android:layout_height="55dp"
@@ -26,5 +27,6 @@
         android:maxLength="1"
         android:textColor="@android:color/white"
         android:textSize="30dp"
+        android:cursorVisible="false"
         tools:ignore="SpUsage" />
-</com.xtr.keymapper.MovableFrameLayout>
+</com.xtr.keymapper.Layout.MovableFrameLayout>
