--- a/app/src/main/res/layout/key.xml
+++ b/app/src/main/res/layout/key.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.xtr.keymapper.Layout.MovableFrameLayout android:orientation="vertical"
+<com.xtr.keymapper.Layout.MovableFrameLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
