--- a/app/src/main/res/layout/activity_configure.xml
+++ b/app/src/main/res/layout/activity_configure.xml
@@ -13,49 +13,44 @@
         android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:text="Select Input device"
+        android:text="@string/select_input_device"
         android:textAlignment="viewStart"
         android:textSize="20sp"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_input"
-        app:layout_constraintRight_toRightOf="@+id/activity_input"
-        app:layout_constraintTop_toTopOf="@+id/activity_input" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <Spinner
         android:id="@+id/spinner"
-        android:layout_width="340dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="128dp"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="48dp"
         android:prompt="@string/configure"
-        android:textSize="20sp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_input"
-        app:layout_constraintRight_toRightOf="@+id/activity_input"
-        app:layout_constraintTop_toTopOf="@+id/activity_input" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/button"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteY="127dp" />
 
     <Button
         android:id="@+id/button"
         style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="128dp"
-        app:cornerRadius="35dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="48dp"
+        app:cornerRadius="25dp"
         app:icon="@drawable/save"
         app:iconPadding="0dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_input"
-        app:layout_constraintRight_toRightOf="@+id/activity_input"
-        app:layout_constraintTop_toTopOf="@+id/activity_input" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:layout_marginTop="228dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/activity_input"
-        app:layout_constraintRight_toRightOf="@+id/activity_input"
-        app:layout_constraintTop_toTopOf="@+id/activity_input" />
+        android:layout_height="0dp"
+        android:gravity="bottom"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
