--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -234,6 +234,7 @@
             app:layout_constraintTop_toBottomOf="@id/barrier1">
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/about_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top|center"
